# llm-authz-audit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
npm/: README.md  install.js  package.json
npm/lib/: python-resolver.js  run.js  venv-manager.js
scripts/: bump-version.sh
src/llm_authz_audit/: __init__.py  __main__.py  cli.py
src/llm_authz_audit/analyzers/: __init__.py  audit_logging.py  auth_context.py  base.py  credential_forwarding.py  endpoints.py  input_validation.py  js_endpoints.py  mcp_permissions.py  output_filtering.py  prompt_injection.py  rag_acl.py  rate_limiting.py  secrets.py  session_isolation.py  tool_rbac.py
src/llm_authz_audit/core/: __init__.py  config.py  context.py  discovery.py  engine.py  finding.py  rule.py  suppression.py
src/llm_authz_audit/llm/: __init__.py  ai_analyzer.py  prompts.py  providers.py
src/llm_authz_audit/output/: banner.py  console.py  formatter.py  json_output.py  sarif.py
src/llm_authz_audit/parsers/: __init__.py  config_parser.py  python_ast.py
src/llm_authz_audit/rules/: __init__.py  schema.py
tests/: conftest.py
tests/fixtures/clean_project/: app.py
tests/fixtures/vulnerable_project/: app.py  mcp.json
tests/integration/: test_cli.py  test_engine_pipeline.py
tests/unit/: test_ai_analyzer.py
tests/unit/analyzers/: test_audit_logging.py  test_auth_context.py  test_credential_forwarding.py  test_endpoints.py  test_input_validation.py  test_js_endpoints.py  test_mcp_permissions.py  test_output_filtering.py  test_rag_acl.py  (+5 more)
(+17 files in other folders)
