[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-authz-audit"
version = "0.1.0"
description = "Static security analyzer for LLM applications — eslint for LLM security"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
ai = ["openai>=1.0", "anthropic>=0.30"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
llm-authz-audit = "llm_authz_audit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_authz_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
strict = true
